[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "labdatautils"
version = "0.1.0"
description = "Tools for experimental data handling, analysis and reporting, including error propagation and data analysis."
readme = "README.md"
authors = [
    { name = "Pablo Castro Pérez" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["numpy>=1.22"]

[project.urls]
Homepage = "https://github.com/Pablo-CastroPerez/labdatautils"
Bug Tracker = "https://github.com/Pablo-CastroPerez/labdatautils/issues"
[tool.setuptools.packages.find]
where = ["src"]
