[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labdatautils"
version = "0.1.0"
description = "Experimental data utilities: error propagation and LaTeX table generation."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Pablo Castro Pérez", email = "pbl.castroperez@gmail.com" }]
license = { text = "MIT" }
dependencies = ["numpy>=1.22"]

[project.urls]
"Homepage" = "https://github.com/Pablo-CastroPerez/labdatautils"
"Bug Tracker" = "https://github.com/Pablo-CastroPerez/labdatautils/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["labdatautils*"]
