[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-data-utils"
version = "0.2.0"
description = "Experimental data utilities: error propagation and LaTeX table generator"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Pablo Castro Perez", email = "pablo-castroperez@outlook.com"}]
license = { text = "MIT" }
dependencies = ["numpy>=1.22", "scipy>=1.9"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/Pablo-CastroPerez/lab-data-utils"
BugTracker = "https://github.com/Pablo-CastroPerez/lab-data-utils/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["labdatautils*"]
